dh-summary/mutants.out/log/src__lib.rs_line_191_col_5_001.log

*** src/lib.rs:191:5: replace compute_stats -> HashMap<String, ColStats> with HashMap::from_iter([(String::new(), Default::default())])

*** mutation diff:
--- src/lib.rs
+++ replace compute_stats -> HashMap<String, ColStats> with HashMap::from_iter([(String::new(), Default::default())])
@@ -183,22 +183,17 @@
             .and_then(|o| *o)
             .map_or(Value::Null, Value::Bool),
         _ => Value::Null,
     }
 }
 
 /// Compute per-column statistics keyed by `unique_name`.
 fn compute_stats(dataset: &Dataset, topk: usize) -> HashMap<String, ColStats> {
-    let mut stats = HashMap::new();
-    for (col, data) in dataset.columns.iter().zip(dataset.data.iter()) {
-        let s = compute_col_stats(data, col.dtype, topk);
-        stats.insert(col.unique_name.clone(), s);
-    }
-    stats
+    HashMap::from_iter([(String::new(), Default::default())]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn compute_col_stats(data: &ColumnData, dtype: DType, topk: usize) -> ColStats {
     match dtype {
         DType::Int => stats_int(data),
         DType::Float | DType::Decimal => stats_float(data),
         DType::Str => stats_str(data, topk),
         DType::Bool => stats_bool(data),


*** /Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=dh-summary@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh memchr v2.8.1
       Fresh proc-macro2 v1.0.106
       Fresh itoa v1.0.18
       Fresh dyn-clone v1.0.20
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh zmij v1.0.21
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh syn v2.0.117
       Fresh serde_json v1.0.150
       Fresh getrandom v0.4.2
       Fresh serde_derive_internals v0.29.1
       Fresh serde_derive v1.0.228
       Fresh uuid v1.23.2
       Fresh serde v1.0.228
       Fresh schemars_derive v0.8.22
       Fresh schemars v0.8.22
       Fresh dh-spec v0.1.0 (/Users/jsy/Documents/projects/dh-spec)
       Fresh dh-store v0.1.0 (/Users/jsy/Documents/projects/dh-store)
       Dirty dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp): the file `src/lib.rs` has changed (1780953894.173069689s, 1s after last build at 1780953893.414455456s)
   Compiling dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp)
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib`
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta`
error[E0277]: the trait bound `ColStats: Default` is not satisfied
   --> src/lib.rs:191:41
    |
191 |     HashMap::from_iter([(String::new(), Default::default())]) /* ~ changed by cargo-mutants ~ */
    |                                         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ColStats`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `dh-summary` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `dh-summary` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-ANPrsK.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib` (exit status: 1)

*** result: Failure(101)
